--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,27 @@
     <artifactId>CloudWatchTimerLambda</artifactId>
     <version>0.0-SNAPSHOT</version>
 
+    <!-- https://blog.symphonia.io/learning-lambda-part-2-835172a74428 -->
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
