maven-bom - Add aws-java-sdk-s3 dependency, to Leverage new bom dependencyManagement.

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>aws-lambda-java-events</artifactId>
             <version>2.2.6</version>
         </dependency>
+        <dependency>
+            <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- https://blog.symphonia.io/learning-lambda-part-2-835172a74428 -->
