--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.filocomune</groupId>
     <artifactId>CloudWatchTimerLambda</artifactId>
-    <version>0.0-SNAPSHOT</version>
+    <version>0.0.0</version>
 
     <dependencyManagement>
         <dependencies>
